[presentation] Update logos.

--- a/presentations/capstone-presentation/index.html
+++ b/presentations/capstone-presentation/index.html
@@ -21,6 +21,7 @@
     <hr>
     <h3>Data-science Capstone project</h3>
     <h4>Alexandre Nanchen</h4>
+    <img style="margin-left:40px;margin-top:80px;" src="images/logos.png">
 </div>
 
 </article>
@@ -29,7 +30,7 @@
   <h3>The task</h3>
   <ol>
 <li>Next word prediction using statistical n-gram models</li>
-<li>Implementation and evaluation</li>
+<li>Model implementation and evaluation</li>
 <li>Challenges
 
 <ul>
@@ -54,8 +55,7 @@
 <li>Continuation probability</li>
 <li>Fix KNeser-Ney smoothing</li>
 </ul></li>
-<li>Perplexity comparison with other toolkits (srilm, mitlm and irstlm)
-<img style="margin-left:100px;" src="images"></li>
+<li>Perplexity comparison with other toolkits (srilm, mitlm and irstlm)</li>
 </ol>
 
 </article>
@@ -76,7 +76,7 @@
   <ol>
 <li>Top 10 words display</li>
 <li>Verbose mode to see algorithm in action</li>
-<li>Word cloud display</li>
+<li>Word cloud display to see 50 top words</li>
 </ol>
 
 <p><a href="">Next word prediction web application</a></p>
