--- a/presentation/index.html
+++ b/presentation/index.html
@@ -9,8 +9,7 @@
 	
 	<!-- LOAD STYLE SHEETS -->
 	<link rel="stylesheet" href="libraries/frameworks/html5slides/default/styles.css">
-	<link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />  <link rel="stylesheet" href = "assets/css/ribbons.css">
-  
+	<link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />    
 </head>
 <body style='display: none'>
 	<section class='slides layout-regular template-regular'>
@@ -21,15 +20,25 @@
     <hr>
     <h3>Data-science Capstone project</h3>
     <h4>Alexandre Nanchen</h4>
-    <img style="margin-left:40px;margin-top:80px;" src="images/logos.png">
+    <img id="logos"style="margin-left:40px;margin-top:80px;" src="images/logos.png">
 </div>
+
+<style>
+.slides > article {
+    color: rgb(102, 102, 102);
+    font-family: "Open Sans",Arial,sans-serif;
+    font-size: 25px;
+    letter-spacing: -1px;
+    line-height: 36px;
+}
+</style>
 
 </article>
 
 <article class="class" id="slide-2" style="background:;">
   <h3>The task</h3>
   <ol>
-<li>Next word prediction using statistical n-gram models</li>
+<li>Next word prediction using statistical N-gram models</li>
 <li>Model implementation and evaluation</li>
 <li>Challenges
 
@@ -45,32 +54,41 @@
 </article>
 
 <article class="" id="slide-3" style="background:;">
-  <h3>Training</h3>
+  <h3>Features highlight</h3>
   <ol>
+<li>Training
+
+<ul>
 <li>HC corpora data: blogs, news and twitter (&gt; 100 Mio words) </li>
 <li>Vocabulary selection to retain 90% of the occurences</li>
 <li>Out of vocabulary modeling unsing &lt;unk&gt; symbol</li>
-<li>KNeser-Ney backoff model of order 4
+<li>Fast training time &lt; 40 seconds for more than 10 Mio N-grams</li>
+<li>KNeser-Ney interpolated model of order 4 with fix smoothing</li>
+<li>Model pruning</li>
+</ul></li>
+<li>Evaluation
 
 <ul>
-<li>Continuation probabilities</li>
-<li>Fix KNeser-Ney smoothing</li>
+<li>Model and perplexity comparison with <a href='https://github.com/mitlm/mitlm'>MITLM</a> open source toolkit</li>
+<li>Perplexity comparison per sources (Twitter, Blogs and news) and model type</li>
 </ul></li>
-<li>Perplexity comparison with other toolkits (srilm, mitlm and irstlm)</li>
-<li>Final perplexity achieved is ...</li>
 </ol>
+
+<p>The full evaluation results are on the Web App.</p>
 
 </article>
 
 <article class="" id="slide-4" style="background:;">
   <h3>Predictive algorithm</h3>
   <ol>
-<li>Model compression during loading trough N-gram hashing</li>
+<li>Model compression during loading trough N-gram context hashing</li>
 <li>Memory footpring reduction of a factor of 2.82</li>
 <li>Selection of most probable words for each N-gram order using backoff weights and continuation probabilities</li>
-<li>Averaging of probability trough all N-gram orders</li>
-<li>Order by decreasing N-gram order</li>
+<li>Averaging of probabilities through all N-gram orders</li>
+<li>Ordering by decreasing scores and N-gram order</li>
 </ol>
+
+<p>For a detailed description, see the Algorithm tab on the Web App.</p>
 
 </article>
 
@@ -78,11 +96,14 @@
   <h3>Word prediction web app</h3>
   <ol>
 <li>Top 10 words display</li>
-<li>Verbose mode to see algorithm in action</li>
-<li>Word cloud display to see 50 top words</li>
+<li>Verbose mode to see the algorithm in action</li>
+<li>Words cloud display to see the 50 most frequent words</li>
+<li>Fast prediction time</li>
 </ol>
 
-<p><a href="">Next word prediction web application</a></p>
+<p><a href="https://alexnanchen.shinyapps.io/nextwordpredictionwebapp/">Next word prediction web application</a></p>
+
+<p><img style="margin-left:0px;margin-top:0px;width:800px;height:300px" src="images/overview.png"></p>
 
 </article>
 
