[presentation] Update pitch deck.

--- a/presentation/pitchdeck-rpubs.html
+++ b/presentation/pitchdeck-rpubs.html
@@ -814,7 +814,7 @@ hljs.initHighlightingOnLoad();
 <li>Evaluation
 
 <ul>
-<li>Model and perplexity comparison with <a href='https://github.com/mitlm/mitlm'>MITLM</a> open source toolkit</li>
+<li>Model and perplexity comparison with <a target="_blank" href='https://github.com/mitlm/mitlm'>MITLM</a> open source toolkit</li>
 <li>Perplexity comparison per sources (Twitter, Blogs and news) and model type</li>
 </ul></li>
 </ol>
